[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/AI/GoapAgent.gd" type="Script" id=1]
[ext_resource path="res://scenes/AI/FiniteStateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/AI/IdleState.gd" type="Script" id=3]
[ext_resource path="res://scenes/AI/MoveState.gd" type="Script" id=4]
[ext_resource path="res://scenes/AI/PerformActionState.gd" type="Script" id=5]

[node name="GoapAgent" type="Node"]
script = ExtResource( 1 )

[node name="FiniteStateMachine" parent="." instance=ExtResource( 2 )]

[node name="IdleState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MoveState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="PerformActionState" type="Node" parent="."]
script = ExtResource( 5 )
